gcc/testsuite/rust/rustc/ui/parser/ice-issue-127600_dg.rs
const!(&raw mut a);
// { dg-error "" "" { target *-*-* } .-1 }

